argocd/network/netbox/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: netbox-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbox.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: netbox
        port: 80
      middlewares:
      - name: private-ips-allow
        namespace: traefik
  tls:
    secretName: netbox-certificate
